feat: changed logo and title

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/USC_logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Demonstrating BME labcodes" />
@@ -24,7 +24,7 @@
     -->
 
   <!-- Title of the webpage-->
-  <title>BME Labcodes</title>
+  <title>USC BRL</title>
 
   <!-- Bootstrap Scripts -->
 
